--- a/password/src/Components/Pages/Password.css
+++ b/password/src/Components/Pages/Password.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(#2a00b7, #42006c);
+  /*  background: linear-gradient(#2a00b7, #42006c);*/
 }
 
 .container {
@@ -14,7 +14,7 @@ body {
 }
 
 fieldset {
-    background-color: lightgray;
+    background-color: #f0ebe1;
 
     border: 1px solid #333;
     border-radius: 8px;
@@ -30,7 +30,7 @@ input {
 }
 
 button {
-    background-color: #2a00b7;
+    background-color: #0d0c22;
     color: white;
     width: 100%;
     padding: 10px 20px;
@@ -42,7 +42,7 @@ button {
 
 button:hover {
     background-color: white;
-    color: #2a00b7;
+    color: #797979;
 }
 
 input {
