--- a/password/src/Components/Navbar.css
+++ b/password/src/Components/Navbar.css
@@ -1,22 +1,27 @@
  .active{
-     background-color: #4c00b4;
+   /*  background-color: #4c00b4;*/
  }
 .nav{
     display: flex;
     justify-content:space-between;
     align-items: center;
     /*margin: 40px 120px;*/
-    color: white;
-    background-color: #0f172a;
+
+    background-color: #fff;
     position: sticky;
     top:0;
+    width: 1520px;
+
+
 }
 .nav-log{
-    font-family: Montserrat;
+    font-family:sans-serif ;
     font-size: 42px;
-    font-weight: 500;
+    font-weight: 600;
     text-decoration: none;
-    color: white;
+    color: #0d0c22;
+    margin-left: 10px;
+
 
 }
 .nav-menu{
@@ -26,7 +31,7 @@
     font-size: 18px;
     gap: 90px;
     text-decoration: none;
-    color: white;
+    color: #0d0c22;
 }
 .nav-password{
    /* border-radius: 50px;
@@ -38,7 +43,7 @@
 }
 nav ul li a{
     text-decoration: none;
-color: orangered;
+color: #262626;
     display: block;
     padding: 0.5rem;
     margin: 0 0.5rem;
