--- a/password/src/Components/Pages/Home.css
+++ b/password/src/Components/Pages/Home.css
@@ -1,12 +1,22 @@
+.container{
+
+    display: grid;
+    grid-template-columns: repeat(1 ,1fr);
+    width: auto;
+    max-width: 1520px;
+}
 .wrapper{
     display:flex;
-    height: 100vh;
-    width: 100vw;
+
+    width: 960px;
     justify-content: center;
     align-items: center;
 }
 .accordian{
-    width:500px
+    width:500px;
+    align-items:center;
+    margin-left: 500px;
+    margin-top: 80px;
 }
 .item{
     background:#f0ebe1;
@@ -15,7 +25,9 @@
     cursor: pointer;
 }
 .title{
-    color :#85662b;
+    font-weight: 800;
+    line-height: 50px;
+    color: #0d0c22;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,11 +47,74 @@
 
 }
 .pass{
-    display: flex;
+    display: grid;
+    /*grid-template-columns: repeat(2,1fr);*/
+    grid-gap: 20px;
+    margin-left: 10px;
+}
+.pics{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 200px;
+   /* margin-top: 20px;*/
+}
+.password{
+    display: grid;
+    /*grid-gap: 10px;*/
+    grid-template-columns: repeat(2,1fr);
 
 }
-.pic{
-    display: flex;
+.word{
+    background:#f0ebe1;
 
-    margin-top: 20px;
+}
+.words{
+    font-size: 20px;
+    margin-top: 100px;
+    margin-left: 50px;
+    align-items: center;
+
+
+}
+.man{
+    font-weight: 800;
+    line-height: 50px;
+    color: #0d0c22;
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+.par{
+    line-height: 10px;
+
+
+}
+.btn{
+    background-color: #0d0c22;
+    text-decoration-color: #fff;
+    height: 30px;
+    padding: 20px;
+    font-size: 20px;
+    border-radius: 30px;
+    width: 150px;
+    text-align: center;
+    line-height: 0px;
+
+
+}
+.para2{
+    align-items: center;
+    margin-left: 100px;
+    font-size: 28px;
+    font-weight: 600;
+}
+.password-image{
+
+
+
+}
+.phone-image{
+
+}
+.phone-images{
+    padding-left: 20px;
 }
